sorry ik ga slapen......

--- a/HaarlemFestival/Views/CheckOut/CheckOut2.cshtml
+++ b/HaarlemFestival/Views/CheckOut/CheckOut2.cshtml
@@ -31,7 +31,7 @@
                 @*<input type="text" value="@Model.Orders[0].Customer.Email" />*@
             </section>
             <section class="RechterColom">
-                <p class="CheckOut2Label">Qountry: </p>
+                <p class="CheckOut2Label">Country: </p>
                 @Html.TextBoxFor(model => model.Orders[0].Customer.Country, new { @class = "CheckOut2TBox", })
                 @*<input type="text" value="@Model.Orders[0].Customer.Country" />*@
             </section>
