Checkout overal prijs, plus flow werkt

--- a/HaarlemFestival/Views/CheckOut/CheckOut2.cshtml
+++ b/HaarlemFestival/Views/CheckOut/CheckOut2.cshtml
@@ -50,7 +50,7 @@
 
 
             <button id="Step2ButttonStep1" onclick="location.href = '@Url.Action("Checkout1", "CheckOut")' ">Step 1</button>
-            <button id="Step2ButttonContinue" onclick="location.href = '@Url.Action("Checkout3", "CheckOut")' " type="submit">Continue</button>
+            <button id="Step2ButttonContinue" @*onclick="location.href = '@Url.Action("Checkout3", "CheckOut")'*@  type="submit">Continue</button>
         }
     </section>
 </section>
