--- a/HaarlemFestival/Views/CheckOut/CheckOut4.cshtml
+++ b/HaarlemFestival/Views/CheckOut/CheckOut4.cshtml
@@ -9,5 +9,6 @@
 }
 
 <section class="CheckOut4">
-    er is betaald met @Model.Orders[0].PaymentMethod
+
+   The selected payment method is @Model.Orders[0].PaymentMethod
 </section>
